build_log.txt
   Compiling xt-screen-translator v0.5.0 (F:\Github\screen-grounded-translator)
error[E0308]: mismatched types
  --> src\main.rs:57:12
   |
57 |     if let Ok(config_dir) = dirs::config_dir() {
   |            ^^^^^^^^^^^^^^   ------------------ this expression has type `std::option::Option<PathBuf>`
   |            |
   |            expected `Option<PathBuf>`, found `Result<_, _>`
   |
   = note: expected enum `std::option::Option<PathBuf>`
              found enum `Result<_, _>`

warning: variable does not need to be mutable
   --> src\overlay\result\mod.rs:231:17
    |
231 |             let mut show_system_cursor = false;
    |                 ----^^^^^^^^^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `show_system_cursor`
   --> src\overlay\result\mod.rs:231:17
    |
231 |             let mut show_system_cursor = false;
    |                 ^^^^^^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_show_system_cursor`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0308`.
warning: `xt-screen-translator` (bin "xt-screen-translator") generated 2 warnings
error: could not compile `xt-screen-translator` (bin "xt-screen-translator") due to 1 previous error; 2 warnings emitted
